# arrow

rust/datafusion/: Cargo.toml
rust/datafusion/derive_df/: Cargo.toml
rust/datafusion/derive_df/src/: lib.rs
rust/datafusion/derive_internals/: Cargo.toml
rust/datafusion/derive_internals/src/: lib.rs
rust/datafusion/examples/: csv_sql.rs  udf.rs
rust/datafusion/src/: lib.rs  logicalplan.rs
rust/datafusion/src/execution/: context.rs  table_impl.rs
rust/datafusion/src/execution/physical_plan/: common.rs  expressions.rs  hash_aggregate.rs  mod.rs  udf.rs
rust/datafusion/src/optimizer/: projection_push_down.rs  type_coercion.rs
rust/datafusion/src/sql/: planner.rs
