[package]
name = "derive_internals"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
